# raspi-ffmpeg

./: .gitignore  CMakeLists.txt
capture/: .cproject  .project  CMakeLists.txt  Decoder.cpp  ICapture.h  RTSPCapture.cpp  RTSPCaptureFactory.cpp  RTSPCaptureFactory.h  VAFrame.cpp  VAFrame.h  VideoFileCapture.h  WebcamCapture.h  main.cpp  version.rc.in
capture-api/: .project  CMakeLists.txt  ICapture.h  WebcamCapture.cpp  WebcamCapture.h
capture-api-net/: CMakeLists.txt
capture-api-net/src/: NewDecoder.cpp  NewDecoder.h  RaspiClient.cpp  RaspiClient.h  connector.cpp  connector.h  frame.h
capture-api-test/: .cproject  .project  main.cpp
capture-api/include/: capture_base.h  capture_factory.h  capture_macros.h  capture_settings.h  frame.h  rtsp_capture.h  rtsp_capture_factory.h  video_file_capture.h  video_file_capture_factory.h  webcam_capture.h  webcam_capture_factory.h
capture-api/src/: decoder.cpp  rtsp_capture.cpp  rtsp_capture_factory.cpp  video_file_capture.cpp  video_file_capture_factory.cpp  webcam_capture.cpp  webcam_capture_factory.cpp
capture-client/: CMakeLists.txt
capture-client/src/: main.cpp
capture-decode/: .project  Decoder.cpp  VAFrame.cpp  VAFrame.h  main.cpp
capture-encode/: .project  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  ICapture.h  WebcamCapture.cpp  WebcamCapture.h  main.cpp
capture-pipeline/: .project  CaptureFilter.cpp  CaptureFilter.h  ContextPool.cpp  ContextPool.h  DecodeFilter.cpp  DecodeFilter.h  Decoder.cpp  Decoder.h  Filter.h  FrameContext.h  GaborFilter.cpp  GaborFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  InputFilter.cpp  InputFilter.h  MatrixPool.cpp  MatrixPool.h  ObjectPool.h  OperationHandle.cpp  OperationHandle.h  OutputFilter.cpp  OutputFilter.h  WebcamCapture.cpp  WebcamCapture.h  main.cpp
capture-send/: .cproject  .project  CMakeLists.txt  ICapture.h  Sender.cpp  Sender.h  VACapture.cpp  VACapture.h  VAFrame.cpp  VAFrame.h  VAFrameContainer.h  WebcamCapture.cpp  WebcamCapture.h  main.cpp
capture-send/include/: message.h  parser.h  sender.h
capture-send/src/: main.cpp  main.cpp.save  main.cpp.save.1  parser.cpp  parser.cpp.save  sender.cpp
capture/include/: CaptureSettings.h  Decoder.h  ICaptureFactory.h  RTSPCapture.h  VAFrame.h  VAFrameContainer.h  VideoFileCaptureFactory.h  WebcamCaptureFactory.h  audio_capture.h  audio_capture_factory.h  audio_decoder.h  audio_encoder.h  audio_frame.h  audio_message_handler.h  capture.h  capture_base.h  capture_factory.h  capture_settings.h  capture_utils.h  decoder.h  frame.h  frame_container.h  rtsp_capture_factory.h  video_file_capture.h  video_file_capture_factory.h  video_message_handler.h  webcam_capture.h  webcam_capture_factory.h
capture/src/: VAFrame.cpp  VideoFileCapture.cpp  VideoFileCaptureFactory.cpp  WebcamCapture.cpp  WebcamCaptureFactory.cpp  audio_capture.cpp  audio_capture_factory.cpp  audio_decoder.cpp  audio_encoder.cpp  audio_frame.cpp  capture_wrap.cxx  frame.cpp  main.cpp  rtsp_capture.cpp  video_file_capture_factory.cpp  webcam_capture.cpp  webcam_capture_factory.cpp
capture/tests/: CMakeLists.txt  test_1.cpp  test_webcam.cpp
capture_client_test/raspi_client_test/: Form1.Designer.cs  Form1.cs
capture_client_test/raspi_client_test/Properties/: AssemblyInfo.cs  Settings.Designer.cs
capture_wrapper/: CMakeLists.txt  version.rc.in
capture_wrapper/include/: decode.h  webcam.h  webcam.i
capture_wrapper/java/src/: Decode.java  FrameBuffer.java  WebcamModule.java  WebcamModuleJNI.java
capture_wrapper/src/: decode.cpp  webcam.cpp  webcam_wrap.cxx
common/: CMakeLists.txt
common/include/: application_params.h  audio_data.h  common_macros.h  common_utils.h  data.h  message_handler.h  messages.h  parser.h  receive_strategy.h  receive_strategy_queue.h  rgpio.h  rvmsconfig.h  sensor_data.h  utils.h  video_frame.h
common/src/: audio_data.cpp  parser.cpp  rgpio.cpp  sensor_data.cpp  video_frame.cpp
communication/: CMakeLists.txt  version.rc.in
communication/include/: comm_macros.h  communication.i  connector.h  jobdistributor.h  rvms_client.h  sender.h  videoframesender.h
communication/java/src/: CommunicationModule.java  CommunicationModuleJNI.java  RvmsClient.java
communication/src/: communication_wrap.cxx  connector.cpp  jobdistributor.cpp  jobdistributor.cpp.save  rvms_client.cpp  sender.cpp  videoframesender.cpp
config/: config.cfg
java/src/: Decode.java  Webcam.java  WebcamModuleJNI.java
motor/: CMakeLists.txt  version.rc.in
motor/include/: motor_base.h  motor_macros.h  motor_message_handler.h  step_motor_28byj48.h
motor/src/: step_motor_28byj48.cpp
rvms-api-net/: CMakeLists.txt
rvms-api-net/src/: RaspiClient.cpp  RaspiClient.h
rvms-client/: raspi_client_test.sln
rvms-client/raspi_client_test/: Form1.Designer.cs  Form1.cs  Program.cs  raspi_client_test.csproj
rvms-client/raspi_client_test/Properties/: Resources.Designer.cs
rvms-server/src/: main.cpp
rvms_api_net/: CMakeLists.txt
rvms_api_net/src/: RaspiClient.cpp  RaspiClient.h
rvms_server/: CMakeLists.txt
rvms_server/src/: main.cpp
sensor/: CMakeLists.txt  version.rc.in
sensor/include/: hum_temp_sensor.h  hum_temp_sensor_data.h  sensor_base.h  sensor_data_base.h  sensor_macros.h  sensor_message_handler.h
sensor/src/: hum_temp_sensor.cpp
test/: CMakeLists.txt  test_parser.cpp  test_parser2.cpp  test_parserMultipleOptions.cpp  test_receiveQueue.cpp  test_sensor_hum_and_temp.cpp  version.rc.in
test/src/: test_parser.cpp
